[project]
name = "langchain-full-crash-course-ai-agents-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.13",
    "langchain-anthropic>=1.4.0",
    "langchain-google-genai>=4.2.1",
    "langchain-mistralai>=1.1.2",
    "langchain-openai>=1.1.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = ["pyright>=1.1.408", "ruff>=0.15.7"]
